--- a/scripts/Abundance Maps.ipynb
+++ b/scripts/Abundance Maps.ipynb
@@ -5,24 +5,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Oxygen Abundance"
+    "# Abundance Maps"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/u/fiza/conda-envs/auriga/lib/python3.7/site-packages/setuptools/_importlib.py:23: UserWarning: `importlib-metadata` version is incompatible with `setuptools`.\n",
+      "This problem is likely to be solved by installing an updated version of `importlib-metadata`.\n",
+      "  warnings.warn(msg)  # Ensure a descriptive message is shown.\n"
+     ]
+    }
+   ],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.colors as mcolors\n",
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import yaml"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,125 +55,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "N_BINS = 200\n",
-    "MIN_PART_COUNT = 1E0\n",
-    "MAX_PART_COUNT = 1E3"
+    "CONFIG_FILE = \"02\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "DISC_STD_CIRC = settings.disc_std_circ\n",
-    "DISC_MIN_CIRC = settings.disc_min_circ\n",
-    "COLD_DISC_DELTA_CIRC = settings.cold_disc_delta_circ\n",
-    "BULGE_MAX_SPECIFIC_ENERGY = -0.6\n",
-    "SUFFIX = \"_02\""
+    "config = yaml.safe_load(open(f\"../configs/{CONFIG_FILE}.yml\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def read_data(simulation: str, tag_by_region: bool = False) -> pd.DataFrame:\n",
+    "def read_data(simulation: str, abundances: list) -> pd.DataFrame:\n",
     "    settings = Settings()\n",
     "\n",
     "    s = Snapshot(simulation=simulation, loadonlytype=[0, 1, 2, 3, 4, 5])\n",
-    "    s.add_metal_abundance(of=\"Fe\", to='H')\n",
-    "    s.add_metal_abundance(of='O', to=\"Fe\")\n",
+    "    s.tag_particles_by_region(\n",
+    "        disc_std_circ=config[\"DISC_STD_CIRC\"],\n",
+    "        disc_min_circ=config[\"DISC_MIN_CIRC\"],\n",
+    "        cold_disc_delta_circ=config[\"COLD_DISC_DELTA_CIRC\"],\n",
+    "        bulge_max_specific_energy=config[\"BULGE_MAX_SPECIFIC_ENERGY\"])\n",
+    "    for abundance in abundances:\n",
+    "        s.add_metal_abundance(of=abundance[0], to=abundance[1])\n",
     "\n",
     "    is_real_star = (s.type == 4) & (s.stellar_formation_time > 0)\n",
     "    is_main_obj = (s.halo == s.halo_idx) & (s.subhalo == s.subhalo_idx)\n",
     "\n",
-    "    props = {\n",
-    "        \"[Fe/H]\": s.metal_abundance[\"Fe/H\"][is_real_star & is_main_obj],\n",
-    "        \"[O/Fe]\": s.metal_abundance[\"O/Fe\"][is_real_star & is_main_obj],}\n",
+    "    props = {\"ComponentTag\": s.region_tag[is_real_star & is_main_obj]}\n",
+    "    for abundance in abundances:\n",
+    "        of, to = abundance\n",
+    "        props[f\"[{of}/{to}]\"] = s.metal_abundance[f\"{of}/{to}\"][\n",
+    "            is_real_star & is_main_obj]\n",
     "\n",
-    "    if tag_by_region:\n",
-    "        s.tag_particles_by_region(\n",
-    "            disc_std_circ=DISC_STD_CIRC,\n",
-    "            disc_min_circ=DISC_MIN_CIRC,\n",
-    "            cold_disc_delta_circ=COLD_DISC_DELTA_CIRC,\n",
-    "            bulge_max_specific_energy=BULGE_MAX_SPECIFIC_ENERGY)\n",
-    "        props[\"ComponentTag\"] = s.region_tag[is_real_star & is_main_obj]\n",
+    "    df = pd.DataFrame(props)\n",
+    "    df[~np.isfinite(df)] = np.nan\n",
+    "    df.dropna(inplace=True)\n",
     "\n",
-    "    return pd.DataFrame(props)"
+    "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_map_for_simulation(simulation: str) -> None:\n",
+    "def plot_map_for_simulation(simulation: str, abundances: list,\n",
+    "                            xlim: tuple, xticks: list,\n",
+    "                            ylim: tuple, yticks: list) -> None:\n",
     "    settings = Settings()\n",
     "    galaxy = parse(simulation)[0]\n",
     "    label = f\"Au{galaxy}\"\n",
-    "    df = read_data(simulation=simulation, tag_by_region=True)\n",
+    "    df = read_data(simulation=simulation, abundances=abundances)\n",
     "\n",
-    "    fig = plt.figure(figsize=(7.4, 2.0))\n",
-    "    gs = fig.add_gridspec(nrows=1, ncols=4, hspace=0.0, wspace=0.0)\n",
-    "    axs = gs.subplots(sharex=True, sharey=True)\n",
+    "    x_label = f\"[{abundances[0][0]}/{abundances[0][1]}]\"\n",
+    "    y_label = f\"[{abundances[1][0]}/{abundances[1][1]}]\"\n",
     "\n",
-    "    for ax in axs.flat:\n",
-    "        ax.set_xlim(-1, 1)\n",
-    "        ax.set_xticks([-0.5, 0, 0.5])\n",
-    "        ax.set_xlabel(\"[Fe/H]\")\n",
+    "    fig = plt.figure(figsize=(3.0, 2.5))\n",
+    "    gs = fig.add_gridspec(nrows=1, ncols=1, hspace=0.0, wspace=0.0)\n",
+    "    ax = gs.subplots(sharex=True, sharey=True)\n",
     "\n",
-    "        ax.set_ylim(0.15, 0.35)\n",
-    "        ax.set_yticks([0.2, 0.25, 0.3])\n",
-    "        ax.set_ylabel(\"[O/Fe]\")\n",
+    "    ax.set_xlim(xlim)\n",
+    "    ax.set_xticks(xticks)\n",
+    "    ax.set_xlabel(x_label)\n",
     "\n",
-    "        ax.tick_params(which='both', direction=\"in\")\n",
-    "        ax.label_outer()\n",
+    "    ax.set_ylim(ylim)\n",
+    "    ax.set_yticks(yticks)\n",
+    "    ax.set_ylabel(y_label)\n",
     "\n",
-    "    for i in range(len(settings.components)):\n",
-    "        is_region = (df[\"ComponentTag\"] == i)\n",
+    "    ax.tick_params(which='both', direction=\"in\")\n",
+    "    ax.label_outer()\n",
     "\n",
-    "        im = axs[i].hist2d(\n",
-    "            df[\"[Fe/H]\"][is_region], df[\"[O/Fe]\"][is_region],\n",
-    "            cmap='nipy_spectral', bins=N_BINS,\n",
-    "            range=[axs[i].get_xlim(), axs[i].get_ylim()],\n",
-    "            norm=mcolors.LogNorm(vmin=MIN_PART_COUNT, vmax=MAX_PART_COUNT),\n",
+    "    im = ax.hist2d(\n",
+    "            df[x_label], df[y_label],\n",
+    "            cmap='nipy_spectral', bins=config[\"ABUNDANCE_MAPS\"][\"N_BINS\"],\n",
+    "            range=[ax.get_xlim(), ax.get_ylim()],\n",
+    "            norm=mcolors.LogNorm(\n",
+    "                vmin=config[\"ABUNDANCE_MAPS\"][\"MIN_PART_COUNT\"],\n",
+    "                vmax=config[\"ABUNDANCE_MAPS\"][\"MAX_PART_COUNT\"]),\n",
     "            rasterized=True)[-1]\n",
     "\n",
-    "        axs[i].text(\n",
-    "            x=0.05, y=0.05, ha=\"left\", va=\"bottom\",\n",
-    "            s=r\"$\\textbf{\" \\\n",
-    "                + list(settings.component_labels.values())[i] + \"}$\",\n",
-    "            c=list(settings.component_colors.values())[i],\n",
-    "            size=8.0, transform=axs[i].transAxes)\n",
+    "    for component in settings.components:\n",
+    "        is_region = (df[\"ComponentTag\"] == settings.component_tags[component])\n",
     "\n",
-    "    cbar = fig.colorbar(im, ax=axs[-1], orientation='vertical',\n",
+    "        median_x = np.nanmedian(df[x_label][is_region])\n",
+    "        median_y = np.nanmedian(df[y_label][is_region])\n",
+    "\n",
+    "        color = settings.component_colors[component]\n",
+    "        marker = settings.component_markers[component]\n",
+    "        comp_label = settings.component_labels[component]\n",
+    "        ax.scatter(median_x, median_y, c=color, s=30, lw=1, edgecolors='k',\n",
+    "                   zorder=15, marker=marker, label=comp_label)\n",
+    "\n",
+    "    cbar = fig.colorbar(im, ax=ax, orientation='vertical',\n",
     "                        label=r'$N_\\star$', pad=0)\n",
     "    cbar.ax.set_yticks([1E0, 1E1, 1E2, 1E3])\n",
     "\n",
-    "    axs[0].text(x=axs[0].get_xlim()[0], y=axs[0].get_ylim()[1],\n",
-    "                s=r\"$\\texttt{\" + label + \"}$\",\n",
-    "                size=8.0, ha='left', va='bottom',\n",
-    "                )\n",
+    "    ax.legend(loc=\"lower left\", framealpha=0.75, fontsize=5.0,\n",
+    "              scatterpoints=1, edgecolor=\"None\", fancybox=True)\n",
+    "\n",
+    "    ax.text(x=ax.get_xlim()[0], y=ax.get_ylim()[1],\n",
+    "            s=r\"$\\texttt{\" + label + \"}$\", size=8.0, ha='left', va='bottom')\n",
     "\n",
     "    fig.savefig(\n",
-    "        f\"../images/metallicity/map_OFe_vs_FeH_{simulation}{SUFFIX}.pdf\")\n",
+    "        f\"../images/metallicity/\"\n",
+    "        f\"map_OFe_vs_FeH_{simulation}{config['FILE_SUFFIX']}.pdf\")\n",
     "    plt.close(fig)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_map_for_sample() -> None:\n",
+    "def plot_map_for_sample(sample: list, abundances: list,\n",
+    "                        xlim: tuple, xticks: list,\n",
+    "                        ylim: tuple, yticks: list) -> None:\n",
+    "\n",
+    "    x_label = f\"[{abundances[0][0]}/{abundances[0][1]}]\"\n",
+    "    y_label = f\"[{abundances[1][0]}/{abundances[1][1]}]\"\n",
+    "\n",
     "    fig = plt.figure(figsize=(7, 8))\n",
     "    gs = fig.add_gridspec(nrows=6, ncols=4, hspace=0.0, wspace=0.0)\n",
     "    axs = gs.subplots(sharex=True, sharey=True)\n",
@@ -170,53 +194,91 @@
     "    for ax in axs.flatten():\n",
     "        ax.tick_params(which='both', direction=\"in\")\n",
     "        if ax == axs[-1, -1]: ax.axis(\"off\")\n",
-    "        ax.set_xlim(-1, 1)\n",
-    "        ax.set_xticks([-0.5, 0, 0.5])\n",
-    "        ax.set_ylim(0.15, 0.35)\n",
-    "        ax.set_yticks([0.20, 0.25, 0.30])\n",
+    "        ax.set_xlim(xlim)\n",
+    "        ax.set_xticks(xticks)\n",
+    "        ax.set_ylim(ylim)\n",
+    "        ax.set_yticks(yticks)\n",
     "        ax.set_axisbelow(True)\n",
     "        if ax.get_subplotspec().is_last_row() or ax == axs[-2, -1]:\n",
-    "            ax.set_xlabel(\"[Fe/H]\")\n",
+    "            ax.set_xlabel(x_label)\n",
     "            ax.tick_params(labelbottom=True)\n",
     "        if ax.get_subplotspec().is_first_col():\n",
-    "            ax.set_ylabel(\"[O/Fe]\")\n",
+    "            ax.set_ylabel(y_label)\n",
+    "        if ax == axs[-1, -1]:  # Draw symbol legend\n",
+    "            for i, c in enumerate(settings.components):\n",
+    "                color = settings.component_colors[c]\n",
+    "                marker = settings.component_markers[c]\n",
+    "                ax.scatter(0.1, 0.7 - 0.15 * (i + 1), c=color, s=30, lw=1,\n",
+    "                           marker=marker, ec='k', zorder=15,\n",
+    "                           transform=ax.transAxes)\n",
+    "                ax.text(x=0.2, y=0.7 - 0.15 * (i + 1), size=8.0, c=color,\n",
+    "                        ha=\"left\", va=\"center\", transform=ax.transAxes,\n",
+    "                        s=r\"$\\textbf{\" \\\n",
+    "                            + list(settings.component_labels.values())[i] \\\n",
+    "                            + \"}$\",)\n",
     "\n",
-    "    for i in range(len(settings.groups[\"Included\"])):\n",
+    "    for i, simulation in enumerate(sample):\n",
     "        ax = axs.flatten()[i]\n",
-    "        galaxy = settings.groups[\"Included\"][i]\n",
-    "        simulation = f\"au{galaxy}_or_l4_s127\"\n",
+    "        galaxy = parse(simulation)[0]\n",
     "        label = f\"Au{galaxy}\"\n",
-    "        df = read_data(simulation=simulation)\n",
-    "        ax.hist2d(df[\"[Fe/H]\"], df[\"[O/Fe]\"],\n",
-    "                  cmap='nipy_spectral',\n",
-    "                  bins=N_BINS,\n",
-    "                  range=[ax.get_xlim(), ax.get_ylim()],\n",
-    "                  norm=mcolors.LogNorm(vmin=MIN_PART_COUNT,\n",
-    "                                       vmax=MAX_PART_COUNT),\n",
-    "                  rasterized=True)\n",
+    "        df = read_data(simulation=simulation, abundances=abundances)\n",
+    "\n",
+    "        ax.hist2d(\n",
+    "            df[x_label], df[y_label],\n",
+    "            cmap='nipy_spectral', bins=config[\"ABUNDANCE_MAPS\"][\"N_BINS\"],\n",
+    "            range=[ax.get_xlim(), ax.get_ylim()],\n",
+    "            norm=mcolors.LogNorm(\n",
+    "                vmin=config[\"ABUNDANCE_MAPS\"][\"MIN_PART_COUNT\"],\n",
+    "                vmax=config[\"ABUNDANCE_MAPS\"][\"MAX_PART_COUNT\"]),\n",
+    "            rasterized=True)[-1]\n",
+    "\n",
+    "        for c in settings.components:\n",
+    "            is_region = (\n",
+    "                df[\"ComponentTag\"] == settings.component_tags[c])\n",
+    "\n",
+    "            median_x = np.nanmedian(df[x_label][is_region])\n",
+    "            median_y = np.nanmedian(df[y_label][is_region])\n",
+    "\n",
+    "            color = settings.component_colors[c]\n",
+    "            marker = settings.component_markers[c]\n",
+    "            comp_label = settings.component_labels[c]\n",
+    "            ax.scatter(median_x, median_y, c=color, s=30, lw=1, edgecolors='k',\n",
+    "                       zorder=15, marker=marker)\n",
     "\n",
     "        ax.text(x=0.05, y=0.95, s=r\"$\\texttt{\" + label + \"}$\",\n",
     "                size=6.0, transform=ax.transAxes, ha='left', va='top')\n",
     "\n",
     "        fig.savefig(\n",
-    "            f\"../images/metallicity/map_OFe_vs_FeH_included{SUFFIX}.pdf\")\n",
+    "            f\"../images/metallicity/\"\n",
+    "            f\"map_OFe_vs_FeH_included{config['FILE_SUFFIX']}.pdf\")\n",
     "\n",
     "    plt.close(fig)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_map_for_simulation(simulation=\"au6_or_l4_s127\")\n",
-    "\n",
-    "# SAMPLE = [f\"au{i}_or_l4_s127\" for i in settings.groups[\"Included\"]]\n",
-    "# for simulation in SAMPLE:\n",
-    "#     plot_map_for_simulation(simulation=simulation)\n",
-    "\n",
-    "# plot_map_for_sample()"
+    "simulation = \"au6_or_l4_s127\"\n",
+    "plot_map_for_simulation(simulation=simulation,\n",
+    "                        abundances=[(\"Fe\", 'H'), ('O', \"Fe\")],\n",
+    "                        xlim=(-1, 1), xticks=[-0.5, 0, 0.5],\n",
+    "                        ylim=(0.15, 0.35), yticks=[0.2, 0.25, 0.3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample = [f\"au{i}_or_l4_s127\" for i in settings.groups[\"Included\"]]\n",
+    "plot_map_for_sample(sample=sample,\n",
+    "                    abundances=[(\"Fe\", 'H'), ('O', \"Fe\")],\n",
+    "                    xlim=(-1, 1), xticks=[-0.5, 0, 0.5],\n",
+    "                    ylim=(0.15, 0.35), yticks=[0.2, 0.25, 0.3])"
    ]
   }
  ],
