Add new figures.

--- a/scripts/Abundance Distribution.ipynb
+++ b/scripts/Abundance Distribution.ipynb
@@ -10,19 +10,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/u/fiza/conda-envs/auriga/lib/python3.7/site-packages/setuptools/_importlib.py:23: UserWarning: `importlib-metadata` version is incompatible with `setuptools`.\n",
-      "This problem is likely to be solved by installing an updated version of `importlib-metadata`.\n",
-      "  warnings.warn(msg)  # Ensure a descriptive message is shown.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from multiprocessing import Pool\n",
     "import os\n",
@@ -34,12 +24,13 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from scipy.stats import binned_statistic\n",
-    "from scipy.stats import gaussian_kde"
+    "from scipy.stats import gaussian_kde\n",
+    "import yaml"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,29 +52,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "N_BINS: int = 50"
+    "CONFIG_FILE = \"02\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "DISC_STD_CIRC = settings.disc_std_circ\n",
-    "DISC_MIN_CIRC = settings.disc_min_circ\n",
-    "COLD_DISC_DELTA_CIRC = settings.cold_disc_delta_circ\n",
-    "BULGE_MAX_SPECIFIC_ENERGY = -0.6\n",
-    "SUFFIX = \"_02\""
+    "config = yaml.safe_load(open(f\"../configs/{CONFIG_FILE}.yml\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,10 +80,10 @@
     "\n",
     "    s = Snapshot(simulation=simulation, loadonlytype=[0, 1, 2, 3, 4, 5])\n",
     "    s.tag_particles_by_region(\n",
-    "        disc_std_circ=DISC_STD_CIRC,\n",
-    "        disc_min_circ=DISC_MIN_CIRC,\n",
-    "        cold_disc_delta_circ=COLD_DISC_DELTA_CIRC,\n",
-    "        bulge_max_specific_energy=BULGE_MAX_SPECIFIC_ENERGY)\n",
+    "        disc_std_circ=config[\"DISC_STD_CIRC\"],\n",
+    "        disc_min_circ=config[\"DISC_MIN_CIRC\"],\n",
+    "        cold_disc_delta_circ=config[\"COLD_DISC_DELTA_CIRC\"],\n",
+    "        bulge_max_specific_energy=config[\"BULGE_MAX_SPECIFIC_ENERGY\"])\n",
     "    s.add_metal_abundance(of, to)\n",
     "    \n",
     "    is_real_star = (s.type == 4) & (s.stellar_formation_time > 0)\n",
@@ -117,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +135,7 @@
     "\n",
     "        hist, bin_edges = np.histogram(\n",
     "            a=df[f\"[{of}/{to}]\"][df[\"RegionTag\"] == idx],\n",
-    "            bins=N_BINS, range=xlim)\n",
+    "            bins=config[\"ABUNDANCE_DISTRIBUTION\"][\"N_BINS\"], range=xlim)\n",
     "        bin_centers = bin_edges[1:] - np.diff(bin_edges)[0] / 2\n",
     "        axs[idx].plot(\n",
     "            bin_centers, hist / n_stars_comp, zorder=11,\n",
@@ -157,7 +144,7 @@
     "        hist, _ = np.histogram(\n",
     "            a=df[f\"[{of}/{to}]\"][\n",
     "                (df[\"RegionTag\"] == idx) & (df[\"IsInSitu\"] == 1)],\n",
-    "            bins=N_BINS, range=xlim)\n",
+    "            bins=config[\"ABUNDANCE_DISTRIBUTION\"][\"N_BINS\"], range=xlim)\n",
     "        axs[idx].plot(\n",
     "            bin_centers, hist / n_stars_comp, zorder=11,\n",
     "            c='k', lw=0.75, ls=(0, (3, 1.5, 1, 1.5)), label=\"In-Situ Stars\")\n",
@@ -165,7 +152,7 @@
     "        hist, _ = np.histogram(\n",
     "            a=df[f\"[{of}/{to}]\"][\n",
     "                (df[\"RegionTag\"] == idx) & (df[\"IsInSitu\"] == 0)],\n",
-    "            bins=N_BINS, range=xlim)\n",
+    "            bins=config[\"ABUNDANCE_DISTRIBUTION\"][\"N_BINS\"], range=xlim)\n",
     "        axs[idx].plot(\n",
     "            bin_centers, hist / n_stars_comp, zorder=11,\n",
     "            c='k', lw=0.75, ls=(0, (5, 1.5)), label=\"Ex-Situ Stars\")\n",
@@ -187,13 +174,13 @@
     "\n",
     "    fig.savefig(\n",
     "        f\"../images/metal_abundance_distribution/{of}_{to}/\"\n",
-    "        f\"with_stellar_origin/{simulation}{SUFFIX}.pdf\")\n",
+    "        f\"with_stellar_origin/{simulation}{config['FILE_SUFFIX']}.pdf\")\n",
     "    plt.close(fig)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,13 +223,13 @@
     "\n",
     "    fig.savefig(\n",
     "        f\"../images/metal_abundance_distribution/{of}_{to}/\"\n",
-    "        f\"{simulation}{SUFFIX}.pdf\")\n",
+    "        f\"{simulation}{config['FILE_SUFFIX']}.pdf\")\n",
     "    plt.close(fig)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,13 +288,13 @@
     "\n",
     "        fig.savefig(\n",
     "            f\"../images/metal_abundance_distribution/{of}_{to}/\"\n",
-    "            f\"included{SUFFIX}.pdf\")\n",
+    "            f\"included{config['FILE_SUFFIX']}.pdf\")\n",
     "        plt.close(fig)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +311,13 @@
     "plot_distribution_for_galaxy(simulation,\n",
     "    of=\"Si\", to='H', xlim=(-2.5, 1.5), ylim=(0, 2), xticks=[-2, -1, 0, 1])\n",
     "plot_distribution_for_galaxy(simulation,\n",
-    "    of=\"Mg\", to='H', xlim=(-3, 1.5), ylim=(0, 2), xticks=[-2, -1, 0, 1])"
+    "    of=\"Mg\", to='H', xlim=(-3, 1.5), ylim=(0, 2), xticks=[-2, -1, 0, 1])\n",
+    "plot_distribution_for_galaxy(simulation,\n",
+    "    of=\"Mg\", to=\"Fe\", xlim=(-0.5, 0.1), ylim=(0, 20),\n",
+    "    xticks=[-0.4, -0.2, 0])\n",
+    "plot_distribution_for_galaxy(simulation,\n",
+    "    of=\"Si\", to=\"Fe\", xlim=(0, 0.5), ylim=(0, 25),\n",
+    "    xticks=[0.1, 0.2, 0.3, 0.4])"
    ]
   },
   {
