Add new figure.

--- a/scripts/Abundance Distribution.ipynb
+++ b/scripts/Abundance Distribution.ipynb
@@ -10,9 +10,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/u/fiza/conda-envs/auriga/lib/python3.7/site-packages/setuptools/_importlib.py:23: UserWarning: `importlib-metadata` version is incompatible with `setuptools`.\n",
+      "This problem is likely to be solved by installing an updated version of `importlib-metadata`.\n",
+      "  warnings.warn(msg)  # Ensure a descriptive message is shown.\n"
+     ]
+    }
+   ],
    "source": [
     "from multiprocessing import Pool\n",
     "import os\n",
@@ -30,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,6 +300,86 @@
     "            f\"../images/metal_abundance_distribution/{of}_{to}/\"\n",
     "            f\"included{config['FILE_SUFFIX']}.pdf\")\n",
     "        plt.close(fig)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_three_panel_distribution_for_galaxy(simulation: str) -> None:\n",
+    "\n",
+    "    fe_vs_h = read_data(\n",
+    "        simulation=simulation, of=\"Fe\", to='H', tag_in_situ=False)\n",
+    "    o_vs_h = read_data(\n",
+    "        simulation=simulation, of='O', to='H', tag_in_situ=False)\n",
+    "    o_vs_fe = read_data(\n",
+    "        simulation=simulation, of='O', to=\"Fe\", tag_in_situ=False)\n",
+    "    dfs = [fe_vs_h, o_vs_h, o_vs_fe]\n",
+    "\n",
+    "    fig = plt.figure(figsize=(2.5, 6.0))\n",
+    "    gs = fig.add_gridspec(nrows=3, ncols=1, hspace=0.4, wspace=0.0)\n",
+    "    axs = gs.subplots(sharex=False, sharey=False)\n",
+    "    abundances = [\"[Fe/H]\", \"[O/H]\", \"[O/Fe]\"]\n",
+    "\n",
+    "    for i, ax in enumerate(axs):\n",
+    "        ax.tick_params(which='both', direction=\"in\")\n",
+    "        ax.set_ylim(0, 1)\n",
+    "        ax.set_xlabel(abundances[i])\n",
+    "        ax.set_ylabel(\"PDF\")\n",
+    "        ax.grid(True, ls='-', lw=0.25, c=\"gainsboro\")\n",
+    "\n",
+    "    axs[0].set_xlim(-2, 1)\n",
+    "    axs[0].set_xticks([-2, -1.5, -1, -0.5, 0, 0.5, 1])\n",
+    "    axs[0].set_ylim(0, 2)\n",
+    "    axs[1].set_xlim(-2, 1)\n",
+    "    axs[1].set_xticks([-2, -1.5, -1, -0.5, 0, 0.5, 1])\n",
+    "    axs[1].set_ylim(0, 2)\n",
+    "    axs[2].set_xlim(0.1, 0.4)\n",
+    "    axs[2].set_xticks([0.1, 0.2, 0.3, 0.4])\n",
+    "    axs[2].set_ylim(0, 20)\n",
+    "\n",
+    "    for i in range(len(dfs)):\n",
+    "        ax = axs[i]\n",
+    "        df = dfs[i]\n",
+    "        abundance = abundances[i]\n",
+    "        for idx, component in enumerate(settings.components):\n",
+    "            is_region = (df[\"RegionTag\"] == idx)\n",
+    "            is_finite = np.isfinite(df[abundance])\n",
+    "            pdf = gaussian_kde(\n",
+    "                df[abundance][is_region & is_finite].to_numpy(\n",
+    "                    dtype=np.float64))\n",
+    "            pdf_x = np.linspace(ax.get_xlim()[0], ax.get_xlim()[1], 100)\n",
+    "            ax.plot(pdf_x, pdf(pdf_x), lw=1.0,\n",
+    "                    color=settings.component_colors[component],\n",
+    "                    label=settings.component_labels[component],\n",
+    "                    zorder=15)\n",
+    "\n",
+    "    axs[0].legend(loc=\"upper left\", framealpha=0, fontsize=6)\n",
+    "\n",
+    "    galaxy = parse(simulation)[0]\n",
+    "    axs[0].text(\n",
+    "        x=0.95, y=0.95, size=8.0,\n",
+    "        s=r\"$\\texttt{\" + f\"Au{galaxy}\" + \"}$\",\n",
+    "        ha='right', va='top', transform=axs[0].transAxes)\n",
+    "\n",
+    "    fig.savefig(\n",
+    "        f\"../images/metal_abundance_distribution/three_panels_\"\n",
+    "        f\"{simulation}{config['FILE_SUFFIX']}.pdf\")\n",
+    "    plt.close(fig)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Three-panel plot for galaxy\n",
+    "simulation = \"au6_or_l4_s127\"\n",
+    "\n",
+    "plot_three_panel_distribution_for_galaxy(simulation)"
    ]
   },
   {
