--- a/scripts/Age Metallicity Relation.ipynb
+++ b/scripts/Age Metallicity Relation.ipynb
@@ -31,6 +31,7 @@
     "from scipy.stats import gaussian_kde\n",
     "from scipy.stats import median_abs_deviation as mad\n",
     "import pandas as pd\n",
+    "import yaml\n",
     "from tqdm import tqdm"
    ]
   },
@@ -53,7 +54,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "figure_setup()"
+    "figure_setup()\n",
+    "settings = Settings()"
    ]
   },
   {
@@ -62,7 +64,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "settings = Settings()"
+    "CONFIG_FILE = \"02\"\n",
+    "config = yaml.safe_load(open(f\"../configs/{CONFIG_FILE}.yml\"))"
    ]
   },
   {
@@ -71,29 +74,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "N_RADIAL_BINS = 14\n",
-    "N_BINS_MAP = 200\n",
-    "MAP_VMIN, MAP_VMAX = 1E0, 1E3\n",
-    "AGE_RANGE = (0, 14)\n",
     "SAMPLE = settings.groups[\"Included\"]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "DISC_STD_CIRC = settings.disc_std_circ\n",
-    "DISC_MIN_CIRC = settings.disc_min_circ\n",
-    "COLD_DISC_DELTA_CIRC = settings.cold_disc_delta_circ\n",
-    "BULGE_MAX_SPECIFIC_ENERGY = -0.6\n",
-    "SUFFIX = \"_02\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,10 +102,10 @@
     "    s.add_metal_abundance(of=\"Fe\", to='H')\n",
     "    s.add_circularity()\n",
     "    s.tag_particles_by_region(\n",
-    "        disc_std_circ=DISC_STD_CIRC,\n",
-    "        disc_min_circ=DISC_MIN_CIRC,\n",
-    "        cold_disc_delta_circ=COLD_DISC_DELTA_CIRC,\n",
-    "        bulge_max_specific_energy=BULGE_MAX_SPECIFIC_ENERGY)\n",
+    "        disc_std_circ=config[\"DISC_STD_CIRC\"],\n",
+    "        disc_min_circ=config[\"DISC_MIN_CIRC\"],\n",
+    "        cold_disc_delta_circ=config[\"COLD_DISC_DELTA_CIRC\"],\n",
+    "        bulge_max_specific_energy=config[\"BULGE_MAX_SPECIFIC_ENERGY\"])\n",
     "\n",
     "    is_real_star = (s.type == 4) & (s.stellar_formation_time > 0)\n",
     "    is_main_obj = (s.halo == s.halo_idx) & (s.subhalo == s.subhalo_idx)\n",
@@ -140,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,9 +165,8 @@
     "        x=ages,\n",
     "        values=abundances,\n",
     "        statistic=np.nanmedian,\n",
-    "        bins=N_RADIAL_BINS,\n",
-    "        range=AGE_RANGE\n",
-    "    )\n",
+    "        bins=config[\"N_RADIAL_BINS\"],\n",
+    "        range=(config[\"AGE_MIN\"], config[\"AGE_MAX\"]))\n",
     "    bin_centers = bin_edges[1:] - np.diff(bin_edges)[0] / 2\n",
     "\n",
     "    stats = {\"Median[Fe/H]\": median,\n",
@@ -193,12 +178,13 @@
     "            x=ages[component_tags == i],\n",
     "            values=abundances[component_tags == i],\n",
     "            statistic=np.nanmedian,\n",
-    "            bins=N_RADIAL_BINS,\n",
-    "            range=AGE_RANGE)\n",
+    "            bins=config[\"N_RADIAL_BINS\"],\n",
+    "            range=(config[\"AGE_MIN\"], config[\"AGE_MAX\"]))\n",
     "        stats[f\"Median[Fe/H]_{settings.components[i]}\"] = median\n",
     "\n",
     "    stats = pd.DataFrame(stats)\n",
-    "    stats.to_csv(f\"../results/age_metallicity_sample_median{SUFFIX}\")\n",
+    "    stats.to_csv(\n",
+    "        f\"../results/age_metallicity_sample_median{config['FILE_SUFFIX']}\")\n",
     "    return stats"
    ]
   },
@@ -211,13 +197,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "try:\n",
     "    stats = pd.read_csv(\n",
-    "        f\"../results/age_metallicity_sample_median{SUFFIX}.csv\",\n",
+    "        f\"../results/age_metallicity_sample_median{config['FILE_SUFFIX']}.csv\",\n",
     "        index_col=0)\n",
     "except FileNotFoundError:\n",
     "    stats = get_stats_of_sample([f\"au{i}_or_l4_s127\" for i in SAMPLE])"
@@ -244,7 +230,7 @@
     "for ax in axs.flatten():\n",
     "    ax.tick_params(which='both', direction=\"in\")\n",
     "    if ax == axs[-1, -1]: ax.axis(\"off\")\n",
-    "    ax.set_xlim(AGE_RANGE)\n",
+    "    ax.set_xlim(config[\"AGE_MIN\"], config[\"AGE_MAX\"])\n",
     "    ax.set_xticks([2, 4, 6, 8, 10, 12])\n",
     "    ax.set_ylim(-4, 3)\n",
     "    ax.set_yticks([-3, -2, -1, 0, 1, 2])\n",
@@ -261,8 +247,8 @@
     "        for i in range(len(settings.components)):\n",
     "            color = list(settings.component_colors.values())[i]\n",
     "            marker = list(settings.component_markers.values())[i]\n",
-    "            ax.scatter(1, 0 - 0.85 * (i + 1), c=color, s=30, lw=1, marker=marker,\n",
-    "                       ec='k', zorder=15)\n",
+    "            ax.scatter(1, 0 - 0.85 * (i + 1), c=color, s=30, lw=1,\n",
+    "                       marker=marker, ec='k', zorder=15)\n",
     "            ax.text(\n",
     "                x=2, y=0 - 0.85 * (i + 1), size=8.0, ha=\"left\", va=\"center\",\n",
     "                s=r\"$\\textbf{\" + list(settings.component_labels.values())[i] \\\n",
@@ -316,8 +302,9 @@
     "            s=r\"$\\mathrm{MSE} = \" + str(np.round(mse, 3)).ljust(5, '0') + \"$\",\n",
     "            size=6.0, transform=ax.transAxes, ha='left', va='bottom')\n",
     "\n",
-    "    fig.savefig(f\"../images/age_metallicity_by_region/included{SUFFIX}.pdf\")\n",
-    "\n",
+    "    fig.savefig(\n",
+    "        f\"../images/age_metallicity_by_region/\"\n",
+    "        f\"included{config['FILE_SUFFIX']}.pdf\")\n",
     "\n",
     "plt.close(fig)"
    ]
@@ -332,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,16 +329,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = read_data(simulation=SIMULATION, include_region=True)"
+    "df = read_data(simulation=SIMULATION)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,9 +372,12 @@
     "    ax.label_outer()\n",
     "\n",
     "axs[0].hist2d(df[\"StellarAge_Gyr\"], df[\"[Fe/H]\"],\n",
-    "              cmap='nipy_spectral', bins=N_BINS_MAP,\n",
+    "              cmap='nipy_spectral',\n",
+    "              bins=config[\"AGE_METALLICITY_RELATION\"][\"N_BINS_MAP\"],\n",
     "              range=[axs[0].get_xlim(), axs[0].get_ylim()],\n",
-    "              norm=mcolors.LogNorm(vmin=MAP_VMIN, vmax=MAP_VMAX),\n",
+    "              norm=mcolors.LogNorm(\n",
+    "                vmin=config[\"AGE_METALLICITY_RELATION\"][\"MAP_VMIN\"],\n",
+    "                vmax=config[\"AGE_METALLICITY_RELATION\"][\"MAP_VMAX\"]),\n",
     "              rasterized=True)[-1]\n",
     "axs[0].plot(axs[0].get_xlim(), [medians[0][1]] * 2, ls=\":\", c='k')\n",
     "axs[0].plot([medians[0][0]] * 2, axs[0].get_ylim(), ls=\":\", c='k')\n",
@@ -397,7 +387,10 @@
     "            s=r\"$\\textbf{All}$\", c='k', transform=axs[0].transAxes)\n",
     "stat, bin_edges, _ = binned_statistic(\n",
     "    x=df[\"StellarAge_Gyr\"], values=df[\"[Fe/H]\"],\n",
-    "    statistic=np.nanmedian, bins=N_RADIAL_BINS, range=AGE_RANGE)\n",
+    "    statistic=np.nanmedian,\n",
+    "    bins=config[\"AGE_METALLICITY_RELATION\"][\"N_BINS_AGE\"],\n",
+    "    range=(config[\"AGE_METALLICITY_RELATION\"][\"AGE_MIN\"],\n",
+    "           config[\"AGE_METALLICITY_RELATION\"][\"AGE_MAX\"]))\n",
     "bin_centers = bin_edges[1:] - np.diff(bin_edges)[0] / 2\n",
     "axs[0].plot(bin_centers, stat, color='k', lw=1.75)\n",
     "axs[0].plot(bin_centers, stat, color=\"white\", lw=1)\n",
@@ -410,7 +403,6 @@
     "    size=8.0, transform=axs[0].transAxes, ha=\"left\", va=\"top\",\n",
     "    )\n",
     "\n",
-    "\n",
     "for i in range(len(settings.components)):\n",
     "    is_region = (df[\"ComponentTag\"] == i)\n",
     "    ax = axs[i + 1]\n",
@@ -419,9 +411,12 @@
     "\n",
     "    im = ax.hist2d(\n",
     "        df[\"StellarAge_Gyr\"][is_region], df[\"[Fe/H]\"][is_region],\n",
-    "        cmap='nipy_spectral', bins=N_BINS_MAP,\n",
+    "        cmap='nipy_spectral',\n",
+    "        bins=config[\"AGE_METALLICITY_RELATION\"][\"N_BINS_MAP\"],\n",
     "        range=[ax.get_xlim(), ax.get_ylim()],\n",
-    "        norm=mcolors.LogNorm(vmin=MAP_VMIN, vmax=MAP_VMAX),\n",
+    "        norm=mcolors.LogNorm(\n",
+    "            vmin=config[\"AGE_METALLICITY_RELATION\"][\"MAP_VMIN\"],\n",
+    "            vmax=config[\"AGE_METALLICITY_RELATION\"][\"MAP_VMAX\"]),\n",
     "        rasterized=True)[-1]\n",
     "\n",
     "    ax.text(\n",
@@ -440,8 +435,9 @@
     "        x=df[\"StellarAge_Gyr\"][is_region],\n",
     "        values=df[\"[Fe/H]\"][is_region],\n",
     "        statistic=np.nanmedian,\n",
-    "        bins=N_RADIAL_BINS,\n",
-    "        range=AGE_RANGE)\n",
+    "        bins=config[\"AGE_METALLICITY_RELATION\"][\"N_BINS_AGE\"],\n",
+    "        range=(config[\"AGE_METALLICITY_RELATION\"][\"AGE_MIN\"],\n",
+    "               config[\"AGE_METALLICITY_RELATION\"][\"AGE_MAX\"]))\n",
     "    bin_centers = bin_edges[1:] - np.diff(bin_edges)[0] / 2\n",
     "    ax.plot(bin_centers, stat, color='k', lw=1.75)\n",
     "    ax.plot(bin_centers, stat, color=color, lw=1)\n",
@@ -460,14 +456,12 @@
     "        size=8.0, transform=ax.transAxes, ha=\"left\", va=\"top\",\n",
     "        )\n",
     "\n",
-    "# cbar = fig.colorbar(im, ax=axs[-1], orientation='vertical',\n",
-    "#                     label=r'$N_\\mathrm{stars}$', pad=0)\n",
-    "# cbar.ax.set_yticks([1E0, 1E1, 1E2, 1E3])\n",
-    "\n",
     "axs[0].text(x=0.95, y=0.95, s=r\"$\\texttt{\" + f\"Au{galaxy}\" + \"}$\",\n",
     "            size=8.0, ha=\"right\", va=\"top\", transform=axs[0].transAxes)\n",
     "\n",
-    "fig.savefig(f\"../images/age_metallicity_by_region/{SIMULATION}{SUFFIX}.pdf\")\n",
+    "fig.savefig(\n",
+    "    f\"../images/age_metallicity_by_region/\"\n",
+    "    f\"{SIMULATION}{config['FILE_SUFFIX']}.pdf\")\n",
     "plt.close(fig)"
    ]
   },
