--- a/scripts/Stellar Tracking.ipynb
+++ b/scripts/Stellar Tracking.ipynb
@@ -17,43 +17,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import pandas as pd\n",
     "import os\n",
-    "from multiprocessing import Pool"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "os.environ[\"MKL_NUM_THREADS\"] = \"1\"\n",
     "os.environ[\"NUMEXPR_NUM_THREADS\"] = \"1\"\n",
-    "os.environ[\"OMP_NUM_THREADS\"] = \"1\"\n",
-    "import numpy as np"
+    "os.environ[\"OMP_NUM_THREADS\"] = \"1\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from multiprocessing import Pool\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "import yaml"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
     "from auriga.snapshot import Snapshot\n",
     "from auriga.images import figure_setup, set_axs_configuration\n",
     "from auriga.settings import Settings\n",
-    "from auriga.parser import parse"
+    "from auriga.parser import parse\n",
+    "from auriga.support import find_indices"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,23 +64,21 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "### Constants"
+    "CONFIG_FILE = \"02\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "DISC_STD_CIRC = settings.disc_std_circ\n",
-    "DISC_MIN_CIRC = settings.disc_min_circ\n",
-    "COLD_DISC_DELTA_CIRC = settings.cold_disc_delta_circ\n",
-    "BULGE_MAX_SPECIFIC_ENERGY = -0.6\n",
-    "SUFFIX = \"_02\""
+    "config = yaml.safe_load(open(f\"../configs/{CONFIG_FILE}.yml\"))"
    ]
   },
   {
@@ -90,22 +90,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_properties_of_ids(simulation: str, ids: np.array) -> pd.DataFrame:\n",
+    "    s = Snapshot(simulation=simulation, loadonlytype=[0, 1, 2, 3, 4, 5])\n",
+    "    s.tag_particles_by_region(\n",
+    "        disc_std_circ=config[\"DISC_STD_CIRC\"],\n",
+    "        disc_min_circ=config[\"DISC_MIN_CIRC\"],\n",
+    "        cold_disc_delta_circ=config[\"COLD_DISC_DELTA_CIRC\"],\n",
+    "        bulge_max_specific_energy=config[\"BULGE_MAX_SPECIFIC_ENERGY\"])\n",
+    "    \n",
+    "    idx = find_indices(s.ids, ids, -1)\n",
+    "    idx = idx[idx >= 0]\n",
+    "\n",
+    "    props = {\"NormalizedPotential\": s.normalized_potential[idx],\n",
+    "             \"Circularity\": s.circularity[idx],\n",
+    "             \"IDs\": ids[idx >= 0]}\n",
+    "    \n",
+    "    return pd.DataFrame(props)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_ids_by_component(simulation: str) -> pd.DataFrame:\n",
-    "    \"\"\"\n",
-    "    Return a DataFrame with data of interest.\n",
-    "    \"\"\"\n",
     "    settings = Settings()\n",
     "\n",
     "    s = Snapshot(simulation=simulation, loadonlytype=[0, 1, 2, 3, 4, 5])\n",
     "    s.tag_particles_by_region(\n",
-    "        disc_std_circ=DISC_STD_CIRC,\n",
-    "        disc_min_circ=DISC_MIN_CIRC,\n",
-    "        cold_disc_delta_circ=COLD_DISC_DELTA_CIRC,\n",
-    "        bulge_max_specific_energy=BULGE_MAX_SPECIFIC_ENERGY)\n",
+    "        disc_std_circ=config[\"DISC_STD_CIRC\"],\n",
+    "        disc_min_circ=config[\"DISC_MIN_CIRC\"],\n",
+    "        cold_disc_delta_circ=config[\"COLD_DISC_DELTA_CIRC\"],\n",
+    "        bulge_max_specific_energy=config[\"BULGE_MAX_SPECIFIC_ENERGY\"])\n",
     "\n",
     "    is_real_star = (s.type == 4) & (s.stellar_formation_time > 0)\n",
     "    is_main_obj = (s.halo == s.halo_idx) & (s.subhalo == s.subhalo_idx)\n",
@@ -113,24 +134,151 @@
     "    ids = {}\n",
     "    for component in settings.components:\n",
     "        is_component = s.region_tag == settings.component_tags[component]\n",
-    "        ids[component] = s.ids[is_component & is_real_star]\n",
+    "        ids[component] = s.ids[is_component & is_real_star & is_main_obj]\n",
     "\n",
     "    return ids"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_temporal_evolution_of_stellar_fraction(\n",
-    "    simulation: str) -> pd.DataFrame:\n",
+    "ids_now = get_ids_by_component(\"au6_or_l4_s127\")\n",
+    "ids_then = get_ids_by_component(\"au6_or_l4_s126\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "141509\n",
+      "140165\n"
+     ]
+    }
+   ],
+   "source": [
+    "n_halo_now = ids_now[\"H\"].shape[0]\n",
+    "print(n_halo_now)\n",
+    "n_halo_then = ids_then[\"H\"].shape[0]\n",
+    "print(n_halo_then)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "H 104923 0.7414581404716308\n",
+      "B 16217 0.11460048477481997\n",
+      "CD 4753 0.033587969669773655\n",
+      "WD 15267 0.10788713085386795\n"
+     ]
+    }
+   ],
+   "source": [
+    "for c in settings.components:\n",
+    "    print(c,\n",
+    "          len(set(ids_then[c]).intersection(set(ids_now[\"H\"]))),\n",
+    "          len(set(ids_then[c]).intersection(set(ids_now[\"H\"]))) / ids_now['H'].shape[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "H 16217\n",
+      "B 185789\n",
+      "CD 16678\n",
+      "WD 35155\n"
+     ]
+    }
+   ],
+   "source": [
+    "for c in settings.components:\n",
+    "    print(c,\n",
+    "          len(set(ids_now[c]).intersection(set(ids_then[\"B\"]))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "props_now = get_properties_of_ids(simulation=\"au6_or_l4_s127\",\n",
+    "                                  ids=ids_now['H'])\n",
+    "props_then = get_properties_of_ids(simulation=\"au6_or_l4_s126\",\n",
+    "                                   ids=ids_now['H'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "141509"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(props_now)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "104923"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "((props_then[\"NormalizedPotential\"] >= config[\"BULGE_MAX_SPECIFIC_ENERGY\"]) & (props_then[\"Circularity\"] <= config[\"DISC_MIN_CIRC\"])).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_temporal_evolution_of_stellar_fraction(simulation: str) -> None:\n",
     "\n",
     "    # Get IDs of stars by component at z=0\n",
     "    ids = get_ids_by_component(f\"{simulation}_s127\")\n",
     "\n",
-    "    # Get temporal evolution of the stellar fraction\n",
+    "    # Create empty data frame\n",
     "    columns = [f\"{c1}_{c2}\" for c1 in settings.components \\\n",
     "        for c2 in settings.components]\n",
     "    df = pd.DataFrame(np.nan * np.ones((128, 16)))\n",
@@ -149,7 +297,19 @@
     "                    set(this_ids[c2]))) / n_comp\n",
     "                df.loc[i, f\"{c1}_{c2}\"] = frac\n",
     "    \n",
-    "    df.to_csv(f\"../results/{simulation}/stellar_tracking{SUFFIX}.csv\")"
+    "    df.to_csv(\n",
+    "        f\"../results/{simulation}/stellar_tracking{config['FILE_SUFFIX']}.csv\")\n",
+    "\n",
+    "    return"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_temporal_evolution_of_stellar_fraction(\"au6_or_l4\")"
    ]
   },
   {
