--- a/scripts/Age Metallicity Relation.ipynb
+++ b/scripts/Age Metallicity Relation.ipynb
@@ -106,6 +106,7 @@
     "        disc_min_circ=config[\"DISC_MIN_CIRC\"],\n",
     "        cold_disc_delta_circ=config[\"COLD_DISC_DELTA_CIRC\"],\n",
     "        bulge_max_specific_energy=config[\"BULGE_MAX_SPECIFIC_ENERGY\"])\n",
+    "    s.tag_in_situ_stars()\n",
     "\n",
     "    is_real_star = (s.type == 4) & (s.stellar_formation_time > 0)\n",
     "    is_main_obj = (s.halo == s.halo_idx) & (s.subhalo == s.subhalo_idx)\n",
@@ -113,10 +114,8 @@
     "    props = {\n",
     "        \"StellarAge_Gyr\": s.stellar_age[is_real_star & is_main_obj],\n",
     "        \"[Fe/H]\": s.metal_abundance[\"Fe/H\"][is_real_star & is_main_obj],\n",
-    "        \"xPosition_ckpc\": s.pos[is_real_star & is_main_obj, 0],\n",
-    "        \"yPosition_ckpc\": s.pos[is_real_star & is_main_obj, 1],\n",
-    "        \"zPosition_ckpc\": s.pos[is_real_star & is_main_obj, 2],\n",
-    "        \"ComponentTag\": s.region_tag[is_real_star & is_main_obj]}\n",
+    "        \"ComponentTag\": s.region_tag[is_real_star & is_main_obj],\n",
+    "        \"IsInSitu\": s.is_in_situ[is_real_star & is_main_obj]}\n",
     "\n",
     "    df = pd.DataFrame(props)\n",
     "    df[~np.isfinite(df)] = np.nan\n",
@@ -126,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,6 +567,100 @@
     "\n",
     "fig.savefig(\n",
     "    f\"../images/age_metallicity_by_region/included_scatter{SUFFIX}.pdf\")\n",
+    "plt.close(fig)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Median Scatter for In-Situ Stars"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "components = []\n",
+    "median_abundances = []\n",
+    "median_ages = []\n",
+    "\n",
+    "for simulation in [f\"au{i}_or_l4_s127\" for i in SAMPLE]:\n",
+    "    df = read_data(simulation=simulation)\n",
+    "    for i in range(len(settings.components)):\n",
+    "        is_region = df[\"ComponentTag\"] == i\n",
+    "        components.append(i)\n",
+    "        median_abundances.append(\n",
+    "            np.nanmedian(df[\"[Fe/H]\"][is_region & df[\"IsInSitu\"]]))\n",
+    "        median_ages.append(\n",
+    "            np.nanmedian(df[\"StellarAge_Gyr\"][is_region & df[\"IsInSitu\"]]))\n",
+    "\n",
+    "components = np.array(components)\n",
+    "median_abundances = np.array(median_abundances)\n",
+    "median_ages = np.array(median_ages)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "markers = list(settings.component_markers.values())\n",
+    "colors = list(settings.component_colors.values())\n",
+    "labels = list(settings.component_labels.values())\n",
+    "\n",
+    "fig, axs = plt.subplots(\n",
+    "    figsize=(7.4, 2.0), nrows=1, ncols=4, sharey=True, sharex=True,\n",
+    "    gridspec_kw={\"hspace\": 0.0, \"wspace\": 0.0})\n",
+    "\n",
+    "for ax in axs.flat:\n",
+    "    ax.grid(True, ls='-', lw=0.25, c=\"gainsboro\")\n",
+    "    ax.tick_params(which='both', direction=\"in\")\n",
+    "\n",
+    "    ax.set_xlim(0, 14)\n",
+    "    ax.set_xticks([2, 4, 6, 8, 10, 12])\n",
+    "    ax.set_xlabel(\"median(Age) [Gyr]\")\n",
+    "\n",
+    "    ax.set_ylim(-1.0, 0.7)\n",
+    "    ax.set_ylabel('median([Fe/H])')\n",
+    "    ax.set_axisbelow(True)\n",
+    "\n",
+    "    ax.label_outer()\n",
+    "\n",
+    "for i, ax in enumerate(axs.flatten()):\n",
+    "    for j in range(4):\n",
+    "        label = labels[j] if j == i else None\n",
+    "        color = colors[j] if j == i else \"silver\"\n",
+    "        zorder = 10 if j == i else 5\n",
+    "        ax.scatter(\n",
+    "            median_ages[components == j],\n",
+    "            median_abundances[components == j],\n",
+    "            c=color, label=label, zorder=zorder,\n",
+    "            s=20, linewidths=0.4, edgecolors=\"white\", marker=markers[j])\n",
+    "\n",
+    "        if j == i:\n",
+    "            age_pdf = gaussian_kde(median_ages[components == j])\n",
+    "            pdf_x = np.linspace(0, 14, 100)\n",
+    "            pdf_y = age_pdf(pdf_x) / np.max(age_pdf(pdf_x)) * 0.2 - 1.0\n",
+    "            ax.fill_between(\n",
+    "                x=pdf_x, y1=-1.0, y2=pdf_y, edgecolor=color,\n",
+    "                facecolor=mcolors.TABLEAU_COLORS[color] + \"30\")\n",
+    "            \n",
+    "            abundance_pdf = gaussian_kde(median_abundances[components == j])\n",
+    "            pdf_y = np.linspace(-1.0, 0.7, 100)\n",
+    "            pdf_x = abundance_pdf(pdf_y) / np.max(abundance_pdf(pdf_y)) * 2\n",
+    "            ax.fill_betweenx(\n",
+    "                y=pdf_y, x1=-pdf_x + 14, x2=14, edgecolor=color,\n",
+    "                facecolor=mcolors.TABLEAU_COLORS[color] + \"30\")\n",
+    "\n",
+    "    ax.legend(loc=\"upper left\", framealpha=0, fontsize=7.5)\n",
+    "\n",
+    "fig.savefig(\n",
+    "    f\"../images/age_metallicity_by_region/\"\n",
+    "    f\"included_scatter_in_situ{config['FILE_SUFFIX']}.pdf\")\n",
     "plt.close(fig)"
    ]
   }
